.kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schedule-service
  labels:
    app: schedule-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schedule-service
  template:
    metadata:
      labels:
        app: schedule-service
    spec:
      containers:
      - name: schedule-service
        image: registry.gitlab.com/presencees/backend/schedule-service:<tag>
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /opt/app/.env
          name: environment
          subPath: .env
      imagePullSecrets:
      - name: presencees-registry-secret
      volumes:
      - name: environment
        configMap:
          name: schedule-service-env
