.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schedule-service
spec:
  selector:
    app: schedule-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
