.kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: jwt
  name: schedule-service
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - backend:
          service:
            name: schedule-service
            port:
              number: 3000
        path: /precensees/schedule
        pathType: Prefix
